--- a/pair.html
+++ b/pair.html
@@ -144,10 +144,10 @@
           <p>
             <h3 class="centered-text">MALVIN  KING PAIRING CODE</h3>
             <br>
-            <h6>Made By Malvin King🔥🥳.</h6>
+            <h6>Made By Mudasir King🔥🥳.</h6>
             <h6>Enter Your Number with Country Code.</h6>
             <div class="input-container">
-              <input placeholder="2637147xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
+              <input placeholder="923239956Xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
               <button id="submit">Submit</button>
             </div>
             
@@ -163,7 +163,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   <script>
     let a = document.getElementById("pair");
-    let b = document.getElementById("submit");
+    let b = document.getElementById("REQUEST");
     let c = document.getElementById("number");
     let box = document.getElementById("box");
 
@@ -171,7 +171,7 @@
       let text = document.getElementById("copy").innerText;
       let obj = document.getElementById("copy");
       await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
-      obj.innerText = "COPIED";
+      obj.innerText = "COPIED CODE";
       obj.style = "color:blue;font-weight:bold";
       obj.size = "5";
       setTimeout(() => {
@@ -188,10 +188,10 @@
       } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
         a.innerHTML = '<a style="color:red;font-weight:bold">Invalid Number</a><br><br>';
       } else {
-        const Malvin_King = c.value.replace(/[^0-9]/g, "");
+        const Mudasir_bot_2 = c.value.replace(/[^0-9]/g, "");
         let bb = "";
         let bbc = "";
-        const cc = Malvin_King.split('');
+        const cc = Mudasir_King.split('');
         cc.map(a => {
           bbc += a;
           if (bbc.length == 3) {
@@ -206,7 +206,7 @@
         c.value = "+" + bb;
         c.style = "color:black;font-size:20px";
         a.innerHTML = '<a style="color:white;font-weight:bold">Please Wait...</a><br><br>';
-        let { data } = await axios(`/code?number=${Malvin_King}`);
+        let { data } = await axios(`/code?number=${Mudasir_King}`);
         let code = data.code || "Service Unavailable";
         a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:white;font-weight:bold">' + code + '</span></font><br><br><br>';
       }
