--- a/pair.html
+++ b/pair.html
@@ -142,13 +142,13 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">MALVIN  KING PAIRING CODE</h3>
+            <h3 class="centered-text">MUDASIR KING PAIRING CODE</h3>
             <br>
             <h6>Made By Mudasir King🔥🥳.</h6>
             <h6>Enter Your Number with Country Code.</h6>
             <div class="input-container">
               <input placeholder="923239956Xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
-              <button id="submit">Submit</button>
+              <button id="request">Request</button>
             </div>
             
             <a id="waiting-message" class="centered-text" style="display: none;">Please wait a while</a>
