--- a/main.html
+++ b/main.html
@@ -86,12 +86,12 @@ body {
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
   <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/SahilKing71/Mudasir_Bot_2`)" class="btn">Deploy</button>
   <button onclick="window.open('https://github.com/SahilKing71/Mudasir_Bot_2')" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://wa.me/263714757857`)" class="btn">Developer 1</button>
-  <button onclick="window.open(`https://wa.me/263780958186`)" class="btn">Developer 2</button>
-  <button onclick="window.open(`https://wa.me/263780166288`)" class="btn">Developer 3</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029Vac8SosLY6d7CAFndv3Z`)" class="btn">Wa Group</button>
-  <button onclick="window.open(`https://youtube.com/@MalvinKing_TECH`)" class="btn">YouTube</button>
-  <button onclick="window.open(`https://www.tiktok.com/@malvinquotes`)" class="btn" >TikTok</button>
+  <button onclick="window.open(`https://wa.me/923239956476`)" class="btn">Developer 1</button>
+  <button onclick="window.open(`https://wa.me/923136197547`)" class="btn">Developer 2</button>
+  <button onclick="window.open(`https://wa.me/923239950046`)" class="btn">Developer 3</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029Vb89jenCnA80Um9na63M`)" class="btn">Wa Group</button>
+  <button onclick="window.open(`https://youtube.com/@Mudasir_TECH`)" class="btn">YouTube</button>
+  <button onclick="window.open(`https://chat.whatsapp.com/BgKtWgynOcGGsoHr2PSVmW`)" class="btn" >GROUP</button>
   <button onclick="window.open(`https://t.me/@Mudasir_bot`)" class="btn">Telegram</button>
 
 
